trunk/Archive2/34/bdcc508403bb88/output
+ g++ -std=c++11 -O3 -march=native -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:16:7: error: use of deleted function 'U::U()'
     U u;
       ^
main.cpp:7:7: note: 'U::U()' is implicitly deleted because the default definition would be ill-formed:
 union U {
       ^
main.cpp:10:11: error: union member 'U::p' with non-trivial 'Point::Point()'
     Point p; // = Point(1,2);
           ^
